change git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs/ProyectoParking-BE/FileContentIndex/6c55ee3b-3144-4210-893d-6fd72ba03d24.vsidx
+/.vs/ProjectEvaluation/proyectoparking-be.metadata.v7.bin
+/.vs/ProyectoParking-BE/DesignTimeBuild/.dtbcache.v2
+/.vs/ProjectEvaluation/proyectoparking-be.projects.v7.bin
