--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,186 @@
-﻿################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
+﻿# Ignorar archivos y carpetas generados por Visual Studio
+.vs/
+bin/
+obj/
 
-/.vs/ProyectoParking-BE/FileContentIndex/6c55ee3b-3144-4210-893d-6fd72ba03d24.vsidx
-/.vs/ProjectEvaluation/proyectoparking-be.metadata.v7.bin
-/.vs/ProyectoParking-BE/DesignTimeBuild/.dtbcache.v2
-/.vs/ProjectEvaluation/proyectoparking-be.projects.v7.bin
+# Ignorar archivos de respaldo y caché
+*.bak
+*.cache
+
+# Ignorar archivos de compilación y resultados
+*.dll
+*.exe
+*.pdb
+*.dll.config
+*.exe.config
+*.manifest
+*.resx
+*.resources
+*.ilk
+*.meta
+*.msi
+*.pch
+*.pgc
+*.pgd
+*.rsp
+*.sbr
+*.suo
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.log
+*.vspscc
+*.vssscc
+*_i.c
+*_p.c
+*.ncb
+*.sdf
+*.opensdf
+*.sln.docstates
+
+# Ignorar archivos de usuario y configuración
+*.user
+*.suo
+*.sln.docstates
+*.suo
+*.userprefs
+*.sln.ide
+
+# Ignorar archivos de análisis de código
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+*.[Pp]ublish.xml
+*.resharper
+*.resharper.user
+_ReSharper*/
+*.suo
+*.user
+*.sln.docstates
+*.suo
+*.userprefs
+*.sln.ide
+
+# Ignorar archivos de análisis de código
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+*.[Pp]ublish.xml
+*.resharper
+*.resharper.user
+_ReSharper*/
+*.suo
+*.user
+*.sln.docstates
+*.suo
+*.userprefs
+*.sln.ide
+
+# Ignorar archivos de análisis de código
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+*.[Pp]ublish.xml
+*.resharper
+*.resharper.user
+_ReSharper*/
+*.suo
+*.user
+*.sln.docstates
+*.suo
+*.userprefs
+*.sln.ide
+
+# Ignorar archivos de análisis de código
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+*.[Pp]ublish.xml
+*.resharper
+*.resharper.user
+_ReSharper*/
+*.suo
+*.user
+*.sln.docstates
+*.suo
+*.userprefs
+*.sln.ide
+
+# Ignorar archivos de análisis de código
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+*.[Pp]ublish.xml
+*.resharper
+*.resharper.user
+_ReSharper*/
+*.suo
+*.user
+*.sln.docstates
+*.suo
+*.userprefs
+*.sln.ide
+
+# Ignorar archivos de análisis de código
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+*.[Pp]ublish.xml
+*.resharper
+*.resharper.user
+_ReSharper*/
+*.suo
+*.user
+*.sln.docstates
+*.suo
+*.userprefs
+*.sln.ide
+
+# Ignorar archivos de análisis de código
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+*.[Pp]ublish.xml
+*.resharper
+*.resharper.user
+_ReSharper*/
+*.suo
+*.user
+*.sln.docstates
+*.suo
+*.userprefs
+*.sln.ide
+
+# Ignorar archivos de análisis de código
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+*.[Pp]ublish.xml
+*.resharper
+*.resharper.user
+_ReSharper*/
+*.suo
+*.user
+*.sln.docstates
+*.suo
+*.userprefs
+*.sln.ide
+
+# Ignorar archivos de análisis de código
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+*.[Pp]ublish.xml
+*.resharper
+*.resharper.user
+_ReSharper*/
+*.suo
+*.user
+*.sln.docstates
+*.suo
+*.userprefs
+*.sln.ide
+
+# Ignorar archivos de análisis de código
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+*.[Pp]ublish.xml
+*.resharper
+*.resharper.user
+_ReSharper*/
+*.suo
+*.user
+*.sln.docstates
+*.suo
